name:                Parser
version:             0.1.0.0
synopsis:            Synopsis
description:         C++ Parser + CDSL Printer

homepage:            -
license:             MIT
license-file:        LICENSE
author:              Semen Trapeznikov
maintainer:          sementrapeznikov@gmail.com
copyright:           2020 Semen Trapeznikov

category:            Web
build-type:          Simple
cabal-version:       >=1.10
tested-with:         GHC == 8.0.1

library
  hs-source-dirs:    src
  exposed-modules:   Expression
                    ,Parser
                    ,Lexer
                    ,TOCDSLPrinter
  ghc-options:       -Wall
  build-depends:     base >= 4.9 && < 5
                    ,array
  default-language:  Haskell2010

executable Parser-exe
  main-is:           Main.hs
  other-modules:     Expression
                    ,Parser
                    ,Lexer
                    ,TOCDSLPrinter
  hs-source-dirs:    src
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:     base >=4.7 && <5
                    ,array
  default-language: Haskell2010
